# audio-video-transcriber

./: .gitignore  Dockerfile  README.md  README.org  pyproject.toml  requirements.txt  transcripts.ipynb
tests/: tests.py
whisper_cpu/: README.org  app.py  transcript.py
